added tests for qa_framework_functions